Bug#9509 Optimizer: wrong result after AND with latin1_german2_ci We cannot propagate constants with tricky collations.